Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weight-tracker
  labels:
    app: weight-tracker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weight-tracker
  template:
    metadata:
      labels:
        app: weight-tracker
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - image: shayregistryweighttracker.azurecr.io/k8s
        name: weight-tracker
