db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels: 
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: postgres:latest
        name: db
        ports:
          - containerPort: 5432
        # volumeMounts:
        # - mountPath: /var/lib/postgresql/data
        #   name: db-data
