LB.yaml
apiVersion: v1
kind: Service
metadata:
  name: weight-tracker-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: weight-tracker
