Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weight-tracker
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  -  http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weight-tracker-service
            port:
              number: 80
